--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,20 +1,49 @@
-//вопрос по обводке - нада ли и так ли ?!
 header {
   width: 100%;
   height: 150px;
   border: 2px solid #000;
 }
+
 main {
   width: 100%;
   display: flex;
   height: calc(100% - 150px);
   border: 1px solid #000;
 }
+
 nav {
-  width: 700px;
+  width: 600px;
   border: 2px solid #000;
 }
+
 aside {
-  width:  calc(100% - 700px);
+  width: calc(100% - 600px);
   border: 2px solid #000;
+}
+
+@media (max-width: 1000px) {
+  nav {
+    width: 400px;
+  }
+  aside {
+    width: calc(100% - 400px);
+  }
+}
+
+@media (max-width: 700px) {
+  nav {
+    width: 300px;
+  }
+  aside {
+    width: calc(100% - 300px);
+  }
+}
+
+@media (max-width: 500px) {
+  nav {
+    width: 200px;
+  }
+  aside {
+    width: calc(100% - 200px);
+  }
 }
